<resources>
    <string name="app_name">Med Manager</string>
    <string name="search_hint">Search by name</string>

    <string name="action_share">Share</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Log Out</string>

    <!--  Medication Add Activity -->
    <string name="title_activity_add_medication">Add Medication</string>
    <string name="medication_title">Enter Name of Medication</string>
    <string name="medication_description">Enter Description</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="time">Time</string>
    <string name="interval">Interval</string>
    <string name="save">Save</string>

    <string name="empty_title">Medication title cannot be blank!</string>
    <string name="empty_description">Medication description can\'t be empty</string>
    <string name="no_date">No date!</string>
    <string name="no_time">No time!</string>
    <!--  end -->

    <!-- Edit Profile Activity -->
    <string name="title_activity_profile">Edit Profile</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone No:</string>
    <string name="email">Email:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="select_picture_title">Get Photo From</string>
    <!-- end  -->

    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <!--  end -->

    <string name="no_name">This field can\'t be empty!</string>

</resources>
