<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_profile"
        android:orderInCategory="101"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_edit_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
