<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" android:fitsSystemWindows="true">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_large"
                card_view:cardCornerRadius="@dimen/spacing_medium"
                card_view:cardElevation="@dimen/spacing_xsmall"
                card_view:cardUseCompatPadding="true">

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_placeholder"
                    android:contentDescription="@string/app_name"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_large"
                android:padding="@dimen/spacing_medium"
                card_view:cardCornerRadius="@dimen/spacing_medium"
                card_view:cardElevation="@dimen/spacing_xsmall"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_medium"
                        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:orientation="horizontal"
                        android:background="?android:attr/selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/name"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"/>

                        <TextView
                            android:id="@+id/name"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            style="@android:style/TextAppearance.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="@color/colorText" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_medium"
                        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:orientation="horizontal"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:attr/selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/address"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"/>

                        <TextView
                            android:id="@+id/address"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            style="@android:style/TextAppearance.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llPhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_medium"
                        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:orientation="horizontal"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:attr/selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/phone"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"/>

                        <TextView
                            android:id="@+id/phoneNo"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            style="@android:style/TextAppearance.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_medium"
                        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:orientation="horizontal"
                        android:background="?android:attr/selectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/email"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"/>

                        <TextView
                            android:id="@+id/email"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            style="@android:style/TextAppearance.Medium"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:layout_marginLeft="@dimen/spacing_medium"
                        android:layout_marginRight="@dimen/spacing_medium"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/gender"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"/>

                        <RadioGroup
                            android:id="@+id/rg_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/spacing_medium"
                                android:layout_marginRight="@dimen/spacing_large"
                                android:layout_marginStart="@dimen/spacing_medium"
                                android:layout_marginEnd="@dimen/spacing_large"
                                android:text="@string/male"
                                android:textColor="@color/colorText"/>

                            <RadioButton
                                android:id="@+id/rb_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/spacing_medium"
                                android:layout_marginRight="@dimen/spacing_medium"
                                android:layout_marginStart="@dimen/spacing_medium"
                                android:layout_marginEnd="@dimen/spacing_medium"
                                android:text="@string/female"
                                android:textColor="@color/colorText"/>

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

